demo1/css/style.css
/*! normalize.css v3.0.2 | MIT License | git.io/normalize */

html {
  font-family: sans-serif; /* 1 */
  -ms-text-size-adjust: 100%; /* 2 */
  -webkit-text-size-adjust: 100%; /* 2 */
}

body {
  margin: 0;
}

article,
aside,
details,
figcaption,
figure,
footer,
header,
hgroup,
main,
menu,
nav,
section,
summary {
  display: block;
}

audio,
canvas,
progress,
video {
  display: inline-block; /* 1 */
  vertical-align: baseline; /* 2 */
}

audio:not([controls]) {
  display: none;
  height: 0;
}

[hidden],
template {
  display: none;
}

a {
  background-color: transparent;
}

a:active,
a:hover {
  outline: 0;
}

abbr[title] {
  border-bottom: 1px dotted;
}

b,
strong {
  font-weight: bold;
}

dfn {
  font-style: italic;
}

h1 {
  font-size: 2em;
  margin: 0.67em 0;
}

mark {
  background: #ff0;
  color: #000;
}

small {
  font-size: 80%;
}

sub,
sup {
  font-size: 75%;
  line-height: 0;
  position: relative;
  vertical-align: baseline;
}

sup {
  top: -0.5em;
}

sub {
  bottom: -0.25em;
}

img {
  border: 0;
}

svg:not(:root) {
  overflow: hidden;
}

figure {
  margin: 1em 40px;
}

hr {
  -moz-box-sizing: content-box;
  box-sizing: content-box;
  height: 0;
}

pre {
  overflow: auto;
}

code,
kbd,
pre,
samp {
  font-family: monospace, monospace;
  font-size: 1em;
}

button,
input,
optgroup,
select,
textarea {
  color: inherit; /* 1 */
  font: inherit; /* 2 */
  margin: 0; /* 3 */
}

button {
  overflow: visible;
}

button,
select {
  text-transform: none;
}

button,
html input[type="button"], /* 1 */
input[type="reset"],
input[type="submit"] {
  -webkit-appearance: button; /* 2 */
  cursor: pointer; /* 3 */
}

button[disabled],
html input[disabled] {
  cursor: default;
}

button::-moz-focus-inner,
input::-moz-focus-inner {
  border: 0;
  padding: 0;
}

input {
  line-height: normal;
}

input[type="checkbox"],
input[type="radio"] {
  box-sizing: border-box; /* 1 */
  padding: 0; /* 2 */
}

input[type="number"]::-webkit-inner-spin-button,
input[type="number"]::-webkit-outer-spin-button {
  height: auto;
}

input[type="search"] {
  -webkit-appearance: textfield; /* 1 */
  -moz-box-sizing: content-box;
  -webkit-box-sizing: content-box; /* 2 */
  box-sizing: content-box;
}

input[type="search"]::-webkit-search-cancel-button,
input[type="search"]::-webkit-search-decoration {
  -webkit-appearance: none;
}

fieldset {
  border: 1px solid #c0c0c0;
  margin: 0 2px;
  padding: 0.35em 0.625em 0.75em;
}

legend {
  border: 0; /* 1 */
  padding: 0; /* 2 */
}

textarea {
  overflow: auto;
}

optgroup {
  font-weight: bold;
}

table {
  border-collapse: collapse;
  border-spacing: 0;
}

td,
th {
  padding: 0;
}

/* Custom style
-------------------------------------------------*/

/* Type
*/

@font-face {
font-family: 'Roboto Condensed';
src: local('Roboto Condensed'), url('../fonts/RobotoCondensed-Regular.ttf') format('truetype');
}

@font-face {
font-family: 'Roboto Condensed Light';
src: local('Roboto Condensed Light'), url('../fonts/RobotoCondensed-Light.ttf') format('truetype');
}

@font-face {
font-family: 'Roboto Condensed Bold';
src: local('Roboto Condensed Bold'), url('../fonts/RobotoCondensed-Bold.ttf') format('truetype');
}

h1, h2, h3, h4, h5, h6 {
    font-family: 'Roboto Condensed Light';
}

#header h1 {
    font-family: 'Roboto Condensed Light';
    font-size: 1.25rem;
    line-height: 1;
    text-transform: uppercase;
    letter-spacing: 2px;
}

#header h1 em {
    font-family: 'Roboto Condensed Bold';
    font-style: normal;
}

.ui-widget * {
    font: 100%/1 'Roboto Condensed', 'DejaVu Sans', Arial, sans-serif;
}

/* Layout
*/

* {
  -ms-box-sizing: border-box;
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
}

*:before,
*:after {
  -ms-box-sizing: border-box;
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
}

#header:before, #header:after,
#main:before, #main:after {
    content: " ";
    display: table;
}

html {
  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
}

body {
    font: 100%/1 'Roboto Condensed', 'DejaVu Sans', Arial, sans-serif;
    color: #3b322d;
    /* pattern by http://jorickvanhees.com */
    background-color: transparent;
    /*: #fff url(../media/rough_diagonal.png) repeat 0 0; /*d9c9ae*/
}

#page {
    max-width: 50em; /*  1000px : 16 = 62.5em */
    margin: 40px auto;
    padding: 0 0.5em;
}

#main {
    overflow: hidden;
    width: 100%;
    height: 100%;
    /*min-height: 60em;*/
    height: 2200px;
    position: relative;
}

#header > div,
#main > div {
    clear: both;
    margin: 0 auto;
    overflow: auto;
    width: 100%;
    height: 100%;   
}

.node {
    display: block;
    float: left;
    overflow: hidden;
    position: absolute;
    clear: both;
    border-radius: 5px;
    border: 1px solid transparent;
    transition: border-color 0.5s ease;
}

.node:hover,
.node:focus {
    cursor: pointer;
    border: 1px solid rgba(0,0,0,0.3);
}

.node-contents {
    position: relative;   
    width: 100%;
    height: 100%;
    padding: 0.25em;
    text-align: right;
    line-height: 1;
	zoom:expression(
	    runtimeStyle.zoom=1,
	    insertAdjacentHTML('beforeEnd','<span class="after"></span>')
    );	
}

.node-contents:after{
    content: "";
    height: 100%;
    width: 0;
    display: inline-block;
}

.node-details {
    text-align: left;
    font-size: 0.875rem;
    line-height: 1;
    position: absolute;
    display: block;
    width: 90%;
    top: 0.45em;
    left: 0.45em;
    margin: 0;
}

.node-details span {
    display: block;
    position: relative;
}

.node-amount {
    font-family: 'Roboto Condensed Bold';
    font-size: 1.25rem;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
}	

.node-title {
    padding: 0.25em 0 0;
}

.subnode {
    background-color: rgba(0, 0, 0, 0.2);
    color: #fff;
    text-align: left;
    display: inline-block;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
    position: relative;
    vertical-align: bottom;
    padding: 0.425rem;
    border: 1px solid rgba(255, 255, 255, 0.4);
    margin-left: 0.1rem;
    margin-top: 0.1rem;
    border-radius: 3px;
    transition: border-color 0.5s ease;
}

.subnode:hover,
.subnode:focus {
    cursor: pointer;
    border: 1px solid rgba(255, 255, 255, 0.8);
}

.subnode-details {
    font-size: 0.75rem;
    line-height: 0.95;
    margin: 0;
    position: absolute;
    bottom: 0.2em;
    left: 0.2em;
}

.subnode-details span {
    display: block;
    position: relative;
}

.subnode-amount {
    font-family: 'Roboto Condensed Bold';
    font-size: 0.875rem;
    margin-bottom: 2px;
}


/* Filters
*/

::-webkit-input-placeholder { color: #666; }
::-moz-placeholder { color: #666; }
:-ms-input-placeholder { color: #666; }

/* Modals
*/

.reveal-modal {    
    border-radius: 5px;
}

.reveal-modal h1, 
.reveal-modal h2,
.reveal-modal h3,
.reveal-modal h4 {
    line-height: 1;
}

.reveal-modal .close-reveal-modal {
    color: #ccc;
    cursor: pointer;
    font-weight: bold;
    line-height: 1;
    position: absolute;
    right: 0.875rem;
    top: 0.625rem;
    display: block;
    padding: 0 0.25em;
}

.reveal-modal .tags {
    margin-left: 0;
}

.reveal-modal .tags li {
    list-style-type: none;
    display: inline-block;
    font-size: 0.875em;
    line-height: 1;
    margin: 0.25em;
    padding: 0.25em 0.45em;
    background-color: #ddd;
    border-radius: 3px;
}

.reveal-modal .tags li:first-child { margin-left: 0; }

